refact: ajuste do Dockerfile para geração do .jar.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8081:8081"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/biblioteca
+      SPRING_DATASOURCE_URL: jdbc:postgresql://banco:5432/biblioteca
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: naka
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
